# src/routes/login.routes.ts
@@ -1,8 +1,10 @@
 import { Router } from "express"
 import { createTokenController } from "../controllers/login.controller"
+import { ensureDataIsValidMiddleware } from "../middlewares"
+import { loginSchema } from "../schemas/login.schema"
 
 const loginRoutes = Router()
 
-loginRoutes.post("", createTokenController)
+loginRoutes.post("", ensureDataIsValidMiddleware(loginSchema), createTokenController)
 
 export { loginRoutes }
