# src/schemas/login.schema.ts
@@ -1,0 +1,8 @@
+import { z } from "zod"
+
+const loginSchema = z.object({
+    email: z.string().email(),
+    password: z.string(),
+})
+
+export { loginSchema }
